--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,11 @@
             <artifactId>reactfx</artifactId>
             <version>2.0-M5</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
